objects/BW_Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>BW_Client_Facing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Client Facing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BW_Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Mitigation__c</fullName>
        <label>Mitigation / Resolution / Dependencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BW_Rating_Indicator__c</fullName>
        <formula>CASE(TEXT(BW_Rating__c),
&quot;1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;2&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;3&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;4&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;5&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;6&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;7&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;8&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;9&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;10&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;Not Found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Rating__c</fullName>
        <label>Rating</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                    <default>true</default>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Running Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Workstream__c</fullName>
        <label>Workstream</label>
        <referenceTo>BW_Workstream__c</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Deliverable</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>